load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "directories.go",
        "iso9660wrap.go",
        "iso9660_writer.go"
    ],
    importpath = "github.com/patricklang/iso9660wrap",
    visibility = ["//visibility:public"]
)

go_binary(
    name = "iso9660wrap",
    srcs = ["cmd/main.go"],
    embed = [":go_default_library"]
)